crates/vihaco-parser/tests/compile_errors/delegate_with_delimiters.stderr
error: #[delegate] cannot be combined with #[delimiters]
 --> tests/compile_errors/delegate_with_delimiters.rs:5:5
  |
5 |     #[delegate]
  |     ^
